# variable-width-transformer-bench

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-mlx.txt  requirements-modal.txt  requirements-scale.txt  requirements.txt
data/: tiny_corpus.txt
docs/: blog_dense_200m_modal_draft.md  paper_scale_preregistration.md
scripts/: bench_mlx_paper_scale.py  build_artifacts.py  compare_paper_scale.py  fetch_white_nights.py  modal_append_terminal_token.py  modal_benchmark.py  modal_paper_scale.py  modal_prepare_dclm.py  prepare_cl100k_dataset.py  train_paper_scale.py
src/vwt_bench/: __init__.py  benchmark.py  data.py  model.py  paper_scale.py  token_data.py  widths.py
tests/: test_artifacts.py  test_benchmark.py  test_compare_paper_scale.py  test_data.py  test_fetch_white_nights.py  test_model.py  test_paper_scale.py  test_token_data.py  test_train_paper_scale.py  test_widths.py
