[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vwt-bench"
version = "0.1.0"
description = "Tiny benchmark for constant-width and variable-width Transformers."
requires-python = ">=3.9"
dependencies = ["numpy>=1.26", "torch>=2.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
